test/tests/stages/18_structures/invalid_types/extra_credit/union_initializers/nested_init_wrong_type.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[3]: 
    CStructDecl: 
      CStructDeclaration: 
        TIdentifier: u
        Bool: 1
        List[3]: 
          CMemberDeclaration: 
            TIdentifier: d
            Double: 
          CMemberDeclaration: 
            TIdentifier: i
            Int: 
          CMemberDeclaration: 
            TIdentifier: c
            Char: 
    CStructDecl: 
      CStructDeclaration: 
        TIdentifier: s
        Bool: 0
        List[2]: 
          CMemberDeclaration: 
            TIdentifier: ptr
            Pointer: 
              Int: 
          CMemberDeclaration: 
            TIdentifier: arr
            Array: 
              TLong: 3
              Structure: 
                TIdentifier: u
                Bool: 1
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[2]: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: x
                  None: 
                  Int: 
                  None: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: my_struct
                  CCompoundInit: 
                    List[2]: 
                      CSingleInit: 
                        CAddrOf: 
                          CVar: 
                            TIdentifier: x
                            None: 
                          None: 
                        None: 
                      CCompoundInit: 
                        List[3]: 
                          CCompoundInit: 
                            List[1]: 
                              CSingleInit: 
                                CConstant: 
                                  CConstDouble: 
                                    TDouble: 1.000000
                                  None: 
                                None: 
                            None: 
                          CCompoundInit: 
                            List[1]: 
                              CSingleInit: 
                                CConstant: 
                                  CConstDouble: 
                                    TDouble: 2.000000
                                  None: 
                                None: 
                            None: 
                          CCompoundInit: 
                            List[1]: 
                              CSingleInit: 
                                CAddrOf: 
                                  CVar: 
                                    TIdentifier: x
                                    None: 
                                  None: 
                                None: 
                            None: 
                        None: 
                    None: 
                  Structure: 
                    TIdentifier: s
                    Bool: 0
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
